# evolve_axum

./: .gitignore  Cargo.toml  Makefile  READEME.md
demo_dioxus/: Cargo.toml  Dioxus.toml  Makefile  tailwind.config.js
demo_dioxus/assets/: bubble.css  tailwind.css
demo_dioxus/src/: main.rs
demo_server_cli/: Cargo.toml  README.md
demo_server_cli/.openapi-generator/: FILES
demo_server_cli/docs/: AuthApi.md  ErrorResp.md  FileApi.md  FileInfo.md  FileUploadReq.md  FileUploadResp.md  MsgResp.md  RegisterReq.md  SendEmailCodeReq.md  SendEmailCodeReqFrom.md  User.md  UserApi.md  UserDeleteReq.md  UserFormatter.md  UserGetResp.md  UserInfoResp.md  UserSearchResp.md  UserUpdateReq.md
demo_server_cli/src/apis/: auth_api.rs  configuration.rs  file_api.rs  mod.rs  user_api.rs
demo_server_cli/src/models/: auth_req.rs  auth_req_authorize_type.rs  auth_resp.rs  authorize_type.rs  change_password_req.rs  current_user.rs  error_resp.rs  file_info.rs  file_upload_req.rs  file_upload_resp.rs  mod.rs  msg_resp.rs  register_req.rs  searched_user.rs  send_email_code_from.rs  send_email_code_req.rs  send_email_code_req_from.rs  send_email_code_resp.rs  user.rs  user_delete_req.rs  user_formatter.rs  user_get_resp.rs  user_info_resp.rs  user_search_resp.rs  user_status.rs  user_type.rs  user_update_req.rs  user_update_resp.rs
demo_server_dao/: Cargo.toml  user_down.sql
demo_server_dao/src/: lib.rs
demo_server_dao/src/meilisearch/: mod.rs  user.rs
demo_server_dao/src/model/: user.rs
demo_server_dao/src/pg/: user.rs
demo_server_dao/src/redis/: user.rs
demo_server_error/: Cargo.toml
demo_server_error/src/: lib.rs
demo_server_main/: Cargo.toml  Dockerfile  Makefile
demo_server_main/src/: api_doc.rs  env.rs  lib.rs  main.rs
demo_server_main/src/api/: auth.rs  file.rs  mod.rs  paging.rs  stream.rs  streaming.rs  user.rs  version.rs
demo_server_main/src/service/: user.rs
demo_yew/: Cargo.toml
demo_yew/src/: main.rs  message.rs
demo_yew/src/components/: chatbox.rs  mod.rs
evolve_axum/: .gitignore  Cargo.toml  Makefile
evolve_axum/src/: api_doc.rs  env.rs  error.rs  main.rs  meilisearch_util.rs  redis_util.rs  response.rs
evolve_axum/src/api/: auth.rs  mod.rs  user.rs  version.rs
evolve_axum/src/dao/meilisearch/: mod.rs
evolve_axum/src/dao/pg/: user.rs
evolve_axum/src/dao/redis/: lua_script.rs  user.rs
evolve_axum/src/model/: user.rs
evolve_axum/src/service/: user.rs
evolve_axum/src/ws/: chat_redis.rs  mod.rs  store_redis.rs
evolve_axum_cli/: Cargo.toml  README.md
evolve_axum_cli/.openapi-generator/: FILES
evolve_axum_cli/docs/: AuthReq.md  AuthReqAuthorizeType.md  AuthResp.md  AuthorizeType.md  ChangePasswordReq.md  CurrentUser.md  ErrorResp.md  SearchedUser.md  SendEmailCodeFrom.md  SendEmailCodeReq.md  SendEmailCodeResp.md  UserApi.md  UserStatus.md  UserType.md  UserUpdateResp.md
evolve_axum_cli/src/apis/: auth_api.rs  configuration.rs  mod.rs  user_api.rs
evolve_axum_cli/src/models/: auth_req.rs  auth_req_authorize_type.rs  auth_resp.rs  authorize_type.rs  change_password_req.rs  current_user.rs  error_resp.rs  mod.rs  msg_resp.rs  register_req.rs  searched_user.rs  send_email_code_from.rs  send_email_code_req.rs  send_email_code_req_from.rs  send_email_code_resp.rs  user.rs  user_delete_req.rs  user_formatter.rs  user_get_resp.rs  user_info_resp.rs  user_search_resp.rs  user_status.rs  user_type.rs  user_update_req.rs  user_update_resp.rs
evolve_axum_dao/: Cargo.toml  Makefile  user.sql  user_data.sql
evolve_axum_dao/src/: lib.rs  paging.rs
evolve_axum_dao/src/meilisearch/: mod.rs  user.rs
evolve_axum_dao/src/model/: user.rs
evolve_axum_dao/src/pg/: user.rs
evolve_axum_dao/src/pg/entity/: permission.rs  permission_role_map.rs  user_role_map.rs
evolve_axum_dao/src/pg_seaorm/: mod.rs  user.rs
evolve_axum_dao/src/pg_seaorm/entity/: mod.rs  sea_orm_active_enums.rs
evolve_axum_dao/src/redis/: lua_script.rs  user.rs
evolve_axum_main/: Cargo.toml
evolve_axum_main/src/: main.rs
evolve_axum_main/src/api/: auth.rs  mod.rs  paging.rs  user.rs  version.rs
evolve_axum_main/src/service/: user.rs
evolve_axum_new/: Cargo.toml  Makefile
evolve_axum_new/src/: email.rs  env.rs  main.rs  response.rs
evolve_axum_new/src/api/: mod.rs
evolve_axum_new/src/service/: user.rs
evolve_axum_new/src/ws/: chat_redis.rs  mod.rs  store_redis.rs
evolve_axum_reverse_proxy/: Cargo.toml
evolve_axum_reverse_proxy/src/: main.rs
evolve_axum_ws/: Cargo.toml
evolve_axum_ws/src/: chat_redis.rs  lua_script.rs  store_redis.rs
evolve_axum_ws/static/: chat.html
evolve_axum_ws/static/lua_scripts/: ws_change.lua
evolve_datetime/: Cargo.toml
evolve_datetime/src/: lib.rs
evolve_error/: Cargo.toml
evolve_error/src/: lib.rs
evolve_mailer/: Cargo.toml
evolve_mailer/src/: lib.rs
evolve_meilisearch/: Cargo.toml
evolve_meilisearch/src/: lib.rs
evolve_redis/: Cargo.toml
evolve_redis/src/: lib.rs
evolve_redis_encoding_derive/: Cargo.toml
evolve_redis_encoding_derive/src/: lib.rs
evolve_seaorm/: Cargo.toml
evolve_seaorm/src/: lib.rs
evolve_util/: Cargo.toml
evolve_util/src/: lib.rs  meilisearch_util.rs  postgres_util.rs  redis_util.rs  seaorm_util.rs
evolve_ws/: Cargo.toml
evolve_ws/src/: chat_redis.rs  error.rs  excute_lua_script.rs  lib.rs  lua_script.rs  store_redis.rs
evolve_ws/static/lua_scripts/: clear_sessions.lua  ws_change.lua
k8s/: Makefile  example-a.yaml  example-b.yaml  example.yaml  kind-config.yaml
k8s/stateful/: evolve.sql  meilisearch.yaml  mysql.yaml  postgresql.yaml  redis.yaml
live/: Makefile  live.html
redis_encoding_derive/: Cargo.toml
redis_encoding_derive/src/: lib.rs
src/: api_doc.rs  chat.rs  datetime.rs  email.rs  env.rs  error.rs  main.rs  postgres_util.rs  redis.rs  redis_util.rs  response.rs
src/api/: auth.rs  user.rs
src/dao/: mod.rs
src/dao/meilisearch/: mod.rs  user.rs
src/model/: user.rs
src/service/: user.rs
src/ws/: chat.rs  hub_backup.rs  memory_hub.rs  mod.rs  model.rs  redis_hub.rs
static/: chat.html
static/lua_scripts/: ws_change.lua
(+11 files in other folders)
