[workspace]
resolver = "1"
members = [
    "demo_server_main",
    "demo_server_cli",
    "demo_server_dao",
    "evolve_redis_encoding_derive",
    "demo_server_error",
    "evolve_datetime",
    "evolve_ws",
    "evolve_mailer",
    "evolve_seaorm",
    "evolve_redis",
    "evolve_meilisearch", "demo_yew",
]
