[package]
name = "demo_server_error"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0"
axum-extra = { version = "0", features = ["typed-header"] }
serde = "1"
jsonwebtoken = "9"
redis = "0"
thiserror = "2"
utoipa = { git = "https://github.com/juhaku/utoipa.git", branch = "master" }
chrono = "0"
meilisearch-sdk = "0"
lettre = "0"
fancy-regex = "0"
serde_urlencoded = "0"
serde_json = "1"
reqwest = "0"
url = "2"
http = "1"
anyhow = "1"
sea-orm = { version = "1.1.7", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "macros",
] }

