[package]
name = "demo_server_main"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0", features = ["macros", "tracing", "ws"] }
axum-extra = { version = "0", features = ["typed-header"] }
chrono = { version = "0", features = ["serde"] }
dotenv = "0"
jsonwebtoken = "9"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0", features = ["cors", "fs", "trace"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
utoipa = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
    "axum_extras",
] }
# utoipa-redoc = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
#     "axum",
# ] }
utoipa-rapidoc = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
    "axum",
] }
# utoipa-scalar = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
#     "axum",
# ] }
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
    "axum",
] }

futures = "0"
rand = "0"
base64 = "0"
fancy-regex = "0"
sha2 = "0"
uuid = "1"
# lettre = "0.11.7"
# 这里是为了解决交叉编译的时候缺少对应操作系统版本的openssl报错的问题
openssl = { version = "0", features = ["vendored"] }
evolve_meilisearch = { path = "../evolve_meilisearch" }
evolve_redis = { path = "../evolve_redis" }
evolve_seaorm = { path = "../evolve_seaorm" }
demo_server_error = { path = "../demo_server_error" }
demo_server_dao = { path = "../demo_server_dao" }
evolve_ws = { path = "../evolve_ws" }
evolve_mailer = { path = "../evolve_mailer" }

meilisearch-sdk = "0"

[dev-dependencies]
http-body-util = "0"
tower = { version = "0.4", features = ["util"] }
mime = "0.3"

# [lib]
# crate-type = ["cdylib"]