[package]
name = "demo_yew"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
demo_server_cli = { path = "../demo_server_cli" }
log = "0.4.26"
wasm-logger = "0.2.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde_json = { version = "1" }
web-sys = "0.3.77"
