[package]
name = "evolve_axum"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async_once = "0.2.6"
axum = { version = "0.7.5", features = ["macros", "tracing", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
listenfd = "1.0.1"
once_cell = "1.19.0"
redis = { version = "0.25.4", features = ["tokio-comp"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
    "axum_extras",
] }
utoipa-scalar = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
    "axum",
] }
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
    "axum",
] }

redis_encoding_derive = { path = "../redis_encoding_derive" }
meilisearch-sdk = { version = "0.22" }
lazy_static = "1.5.0"
futures = "0.3.30"
rand = "0.8.5"
base64 = "0.22.1"
fancy-regex = "0.13.0"
sha2 = "0.10.8"
uuid = "1.9.1"
lettre = "0.11.7"
# 这里是为了解决交叉编译的时候缺少对应操作系统版本的openssl报错的问题
openssl = { version = "0.10.64", features = ["vendored"] }

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.4", features = ["util"] }
mime = "0.3"
