[package]
name = "evolve_axum_dao"
version = "0.1.0"
edition = "2021"

[dependencies]
meilisearch-sdk = { version = "0.22" }
once_cell = "1.19.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async_once = "0.2.6"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
dotenv = "0.15.0"
redis = { version = "0.25.4", features = ["tokio-comp"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
serde = { version = "1.0.203", features = ["derive"] }
redis_encoding_derive = { path = "../redis_encoding_derive" }
evolve_error = { path = "../evolve_error" }
serde_json = "1.0.120"
utoipa = { git = "https://github.com/juhaku/utoipa.git", branch = "master" }
evolve_util = { path = "../evolve_util" }
evolve_datetime = { path = "../evolve_datetime" }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = "1.9.1"
