[package]
name = "evolve_axum_dao"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = "1"
meilisearch-sdk = "0"
once_cell = "1"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
async_once = "0"
# sqlx = { version = "0", features = [
#     "runtime-tokio-native-tls",
#     "postgres",
#     "chrono",
# ] }
dotenv = "0"
redis = { version = "0", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0"
serde = { version = "1", features = ["derive"] }
redis_encoding_derive = { path = "../redis_encoding_derive" }
evolve_error = { path = "../evolve_error" }
serde_json = "1"
utoipa = { git = "https://github.com/juhaku/utoipa.git", branch = "master" }
evolve_util = { path = "../evolve_util" }
evolve_datetime = { path = "../evolve_datetime" }
chrono = { version = "0", features = ["serde"] }
sea-orm = { version = "1.1.7", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "macros",
] }
