[package]
name = "evolve_axum_main"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros", "tracing", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
    "axum_extras",
] }
# utoipa-redoc = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
#     "axum",
# ] }
utoipa-rapidoc = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
    "axum",
] }
# utoipa-scalar = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
#     "axum",
# ] }
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa.git", branch = "master", features = [
    "axum",
] }

futures = "0.3.30"
rand = "0.8.5"
base64 = "0.22.1"
fancy-regex = "0.14.0"
sha2 = "0.10.8"
uuid = "1.9.1"
# lettre = "0.11.7"
# 这里是为了解决交叉编译的时候缺少对应操作系统版本的openssl报错的问题
openssl = { version = "0.10.64", features = ["vendored"] }
evolve_util = { path = "../evolve_util" }
evolve_datetime = { path = "../evolve_datetime" }
evolve_error = { path = "../evolve_error" }
evolve_axum_dao = { path = "../evolve_axum_dao" }
evolve_axum_ws = { path = "../evolve_axum_ws" }
evolve_mailer = { path = "../evolve_mailer" }

meilisearch-sdk = "0"

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.4", features = ["util"] }
mime = "0.3"
