[package]
name = "evolve_axum_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
redis_encoding_derive = { path = "../redis_encoding_derive" }
serde = { version = "1", features = ["derive"] }
axum = { version = "0", features = ["macros", "tracing", "ws"] }
fancy-regex = "0"
futures = "0"
rand = "0"
serde_json = "1"
tokio = { version = "1" }
evolve_error = { path = "../evolve_error" }
redis = { version = "0", features = ["tokio-comp"] }
evolve_redis = { path = "../evolve_redis" }
once_cell = "1"
dotenv = "0"
uuid = "1"
tracing = "0"