[package]
name = "evolve_redis"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1"
async_once = "0"
tracing = "0"
dotenv = "0"
redis = { version = "0", features = ["tokio-comp"] }
tokio = "1"
tokio-stream = "0"
evolve_redis_encoding_derive = { path = "../evolve_redis_encoding_derive" }