[package]
name = "evolve_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
redis_encoding_derive = { path = "../redis_encoding_derive" }
serde = { version = "1.0.203", features = ["derive"] }
axum = { version = "0.7.5", features = ["macros", "tracing", "ws"] }
fancy-regex = "0.13.0"
futures = "0.3.30"
rand = "0.8.5"
serde_json = "1.0.120"
tokio = { version = "1.38.0" }
evolve_error = { path = "../evolve_error" }
redis = { version = "0.25.4", features = ["tokio-comp"] }
evolve_util = { path = "../evolve_util" }
once_cell = "1.19.0"
dotenv = "0.15.0"
uuid = "1.9.1"
tracing = "0.1.40"