[package]
name = "evolve_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
axum = { version = "0", features = ["macros", "tracing", "ws"] }
fancy-regex = "0"
futures = "0"
rand = "0.9.1"
serde_json = "1"
tokio = { version = "1" }
redis = { version = "0", features = ["tokio-comp"] }
evolve_redis = { path = "../evolve_redis" }
once_cell = "1"
dotenv = "0"
uuid = "1"
tracing = "0"
thiserror = "2"
